Fixed: Navigation hovering Fixed: Two widgets in one column, giving them more spacing

--- a/site-sass/brennan/site.footer.scss
+++ b/site-sass/brennan/site.footer.scss
@@ -66,6 +66,10 @@
     border-bottom: 2px solid #fff;
   }
 
+  .widget-container + .widget-container {
+    padding-top: 20px;
+  }
+
 
 @include mq(mobile) {
 
